# pendersen-project

./: README.md  parameters.json
pendersen_client/: Cargo.toml  build.rs
pendersen_client/src/: lib.rs  main.rs
pendersen_client/tests/: auth_test.rs
pendersen_server/: Cargo.toml
pendersen_server/src/: auth_service.rs  lib.rs  main.rs
pendersen_server/tests/: auth_test.rs
proto/: pendersen.proto
